# AudioVideoEncoderDecoder

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cxd/videodecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVManager.cpp  AVPlayer.cpp  CMakeLists.txt  FrameQueue.cpp  native-lib.cpp
app/src/main/cpp/include/: AVManager.h  AVPlayer.h  Compiler.h  FrameQueue.h  Log.h  Singleton.h
app/src/main/java/com/cxd/av/activity/: AbstractPermissionActivity.java  MainActivity.java
app/src/main/java/com/cxd/av/audiodecoder/: AudioPlayer.java
app/src/main/java/com/cxd/av/base/: BaseAV.java
app/src/main/java/com/cxd/av/utils/: AVUtils.java  PlaybackConfiguration.java  StorageUtils.java
app/src/main/java/com/cxd/av/videodecoder/: VideoPlayer.java
app/src/main/java/com/cxd/av/views/: DownUpDetector.java  GestureRecognizer.java  RotationGestureDetector.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cxd/videodecoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
signing-info/: apk-key.jks  private_key.pepk
